Quorum3/Library/Tests/IfStatement/Pass/MultipleIfBlocksNestedLevel2_01.quorum
class Main
    action Main
        integer result = 0

        integer level1 = 0
        integer level2a = 0
        integer level2b = 0
        integer level2c = 0
        integer finalAdd = 1

        if level1 = 1
            integer multiplier
            integer adder
            if level2a = 1
                result = 10
            else
                result = 20
            end
            if level2b = 1
                multiplier = 10
            else
                multiplier = 20
            end
            if level2c = 1
                adder = 1
            else
                adder = 2
            end
            result = result * multiplier + adder
        end

        if finalAdd = 1
            result = result + 1000
        elseif finalAdd = 2
            result = result + 2000
        else
            result = result + 3000
        end

        output result
    end
end
