Quorum3/Library/Tests/IfStatement/Fail/IfStatementDouble().quorum
class Main
    action Main
        integer result = 0
        double a = 1.0

        if a
            result = 1
        else
            result = 2
        end

        output result
    end
end